--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,6 @@
 *{
     margin: 0;
     padding: 0;
-    line-height: 1.5;
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
 }
@@ -21,6 +20,7 @@
 h1 {
     font-size: 2.5rem;
     font-weight: 600;
+    line-height: 1.5;
     background: linear-gradient(90deg, #00F5A0 0%, #00D9F5 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -28,12 +28,20 @@ h1 {
 
 h2{
     color: var(--accent-color);
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
 }
 
 h3{
     font-family: 'Tinos', serif;
-    font-weight: 300;
+    font-weight: lighter;
+    font-size: 1.2rem;
     color: var(--accent-color);
+    margin-bottom: 1rem;
+}
+
+p{
+    line-height: 1.8;
 }
 
 body{
@@ -78,19 +86,77 @@ a{
 }
 
 .button-gradient{
+    color: var(--main-color);
     background: linear-gradient(90deg, #00F5A0 0%, #00D9F5 100%);
     border-radius: 5px;
     border: none;
+    padding: 0.5rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
 
 .right-flexed .button-gradient{
-    padding: 0.5rem;
     width: 7rem;
 }
 
-@media screen and (min-width: 1024px){
+.section-padding{
+    padding-top: 10vh;
+    padding-bottom: 10vh;
+}
+
+#hero{
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+#me{
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 2rem;
+}
+
+/* #line{
+    position:absolute;
+    background: linear-gradient(90deg, #00F5A0 0%, #00D9F5 100%);
+    border-radius: 3px;
+    width: 7rem;
+    transform: rotate(-90deg);  
+    left: 3px;
+    top: 354.54px;
+} */
+
+#projects{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.project{
+    background-color: #222525;
+    border-radius: 5px;
+    margin-bottom: 2rem;
+}
+
+#long-button{
+    width: 20rem;
+    display: block;
+    margin: 0 auto;
+}
+
+.desc-wrapper{
+    padding: 1.2rem;
+}
+
+.tools-wrapper{
+    padding-bottom: 1.2rem;
+}
+
+.tools-wrapper span{
+    font-size: 0.7rem;
+    margin-bottom: 0.2rem;
+}
+
+@media screen and (min-width: 700px){
     .container{
         margin-left: 9rem;
         margin-right: 9rem;
@@ -104,10 +170,34 @@ a{
     }
 
     .right-flexed{
-        width: 20%;
+        width: 30%;
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        align-items: center;
         justify-content: space-around;
-        margin-right: 1rem;
+    }
+
+    .right-flexed a{
+        margin-right: 3rem;
+    }
+
+    #hero{
+        flex-direction: row;
+        align-items: center;
+    }
+}
+
+@media screen and (min-width: 1024px){
+    .project{
+        width: 45%;
+        margin: 0;
+        
+    }
+    .project-wrapper{
+        display: flex;
+        justify-content: space-between;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding-bottom: 3rem;
     }
 }
