--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,8 @@
 :root{
     --main-color: #041F31;
     --font-color: #BDEBEA;
-    /* --hover-color:
-        --link-color:
-        --gradient-color:
-    */
+    --hover-color: #B0EBC8;
+    --link-color: #F5B618;
     --accent-color: #D7E5EC;
 }
 
@@ -12,6 +10,9 @@
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
+}
+
+html{
     font-size: 16px;
 }
 
@@ -53,14 +54,12 @@ body{
     margin-right: 1rem;
 }
 
+/* Nav styles */
+
 header{
     margin: 0;
     padding: 0;
     margin-bottom: 2rem;
-}
-
-nav{
-    /* display: flex; */
 }
 
 .links-wrapper{
@@ -77,11 +76,26 @@ nav{
     flex-direction: column;
 }
 
+.right-flexed a{
+    color: #BDEBEA;
+}
+
+/* Link and Button styles */
+
+button a{
+    color: var(--main-color);
+    font-size: 1.5rem;
+}
+
 a{
     text-decoration: none;
-    color: #BDEBEA;
+    color: var(--font-color);
     margin-top: 1rem;
     margin-bottom: 1rem;
+}
+
+a:hover{
+    color: var(--link-color);
 }
 
 .button-gradient{
@@ -94,9 +108,20 @@ a{
     margin-bottom: 1rem;
 }
 
+button:hover{
+    background: linear-gradient(90deg, #00D9F5 0%, #00F5A0 100%);
+    color: var(--accent-color);
+}
+
+button a:hover{
+    color:var(--hover-color);
+}
+
 .right-flexed .button-gradient{
     width: 7rem;
 }
+
+/* Hero styles */
 
 .section-padding{
     padding-top: 10vh;
@@ -128,6 +153,8 @@ a{
     top: 354.54px;
 } */
 
+/* Projects section */
+
 #projects{
     display: flex;
     flex-direction: column;
@@ -138,6 +165,11 @@ a{
     background-color: #222525;
     border-radius: 5px;
     margin-bottom: 2rem;
+}
+
+.project:hover{
+    box-shadow: 10px 20px 20px 4px rgba(0,0,0,0.36)
+    ;
 }
 
 #long-button{
@@ -158,6 +190,8 @@ a{
     font-size: 0.7rem;
     margin-bottom: 0.2rem;
 }
+
+/* Skills section */
 
 .skills-wrapper{
     display: flex;
@@ -187,11 +221,56 @@ i{
     color: #F7DF1E;
 }
 
+/* Social media links 
+    Footer styles */
+
+.fa-envelope , .fa-linkedin , .fa-github {
+   font-size: 1.5rem;
+   color: var(--main-color);
+   background: linear-gradient(90deg, #00F5A0 0%, #00D9F5 100%);
+   padding: 0.5rem;
+   border-radius: 2rem;
+}
+
+.link-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.link-wrapper > a{
+    margin: 0;
+    margin-bottom: 0.5rem;
+    font-size: 0.8rem;
+}
+
+.fa-envelope:hover ,.fa-linkedin:hover , .fa-github:hover{
+    background: linear-gradient(90deg, #00D9F5 0%, #00F5A0  100%);
+    color: var(--hover-color);
+}
+
+.social-links{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3rem;
+}
+
+footer p{
+    font-size: 0.8rem;
+    text-align: center;
+    padding-bottom: 2rem;
+}
+
 
 @media screen and (min-width: 700px){
+    h3{
+        font-size: 1rem;
+    }
     .container{
-        margin-left: 9rem;
-        margin-right: 9rem;
+        margin-left: 5rem;
+        margin-right: 5rem;
     }
 
     .links-wrapper{
@@ -217,6 +296,19 @@ i{
         flex-direction: row;
         align-items: center;
     }
+
+    .skill{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 10%;
+    }
+
+    footer{
+        padding-top: 8rem;
+        font-size: 0.2rem;
+    }
 }
 
 @media screen and (min-width: 1024px){
@@ -227,9 +319,31 @@ i{
     }
     .project-wrapper{
         display: flex;
-        justify-content: space-between;
         flex-direction: row;
         flex-wrap: wrap;
         padding-bottom: 3rem;
+    }
+}
+
+@media screen and (min-width: 1400px){
+    html{
+        font-size: 18px;
+    }
+
+    h3{
+        font-size: 1.2rem;
+    }
+
+    .container{
+        margin-left: 12rem;
+        margin-right: 12rem;
+    }
+
+    .button-gradient{
+        padding: 0.7rem;
+    }
+
+    #long-button{
+        width: 30rem;
     }
 }
