--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -98,6 +98,14 @@ a:hover{
     color: var(--link-color);
 }
 
+#text-link{
+    color: var(--link-color);
+}
+
+#text-link:hover{
+    color: var(--hover-color);
+}
+
 .button-gradient{
     color: var(--main-color);
     background: linear-gradient(90deg, #00F5A0 0%, #00D9F5 100%);
@@ -167,9 +175,19 @@ button a:hover{
     margin-bottom: 2rem;
 }
 
+.project-image{
+    max-width: 100%;
+    border-radius: 5px;
+    height: auto;
+}
+
 .project:hover{
-    box-shadow: 10px 20px 20px 4px rgba(0,0,0,0.36)
-    ;
+    box-shadow: 10px 20px 20px 4px rgba(0,0,0,0.36);
+}
+
+.link-button{
+    padding: 0.4rem;
+    font-size: 14px;
 }
 
 #long-button{
@@ -179,7 +197,21 @@ button a:hover{
 }
 
 .desc-wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    justify-content: space-between;
     padding: 1.2rem;
+    margin: 5px;
+}
+
+.desc-wrapper p{
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+}
+
+.desc-wrapper button{
+    justify-content:left;
 }
 
 .tools-wrapper{
@@ -317,9 +349,9 @@ footer p{
     .project{
         width: 50%;
         padding: 2%;
-        margin: 0;
-        
+        margin: 0;        
     }
+
     .projects-wrapper{
         display: flex;
         justify-content: space-between;
@@ -327,6 +359,20 @@ footer p{
         flex-wrap: nowrap;
         padding-bottom: 3rem;
         gap: 10px;
+    }
+
+    .projects-wrapper-page{
+        display: flex;
+        justify-content:space-between;
+        flex-direction: row;
+        flex-wrap: wrap;
+        padding-bottom: 5rem;
+        gap: 10px;
+    }
+
+    .project-page{
+        width: 45%;
+        margin-bottom: 10px;
     }
 }
 
@@ -336,8 +382,8 @@ footer p{
     }
 
     .container{
-        margin-left: 14rem;
-        margin-right: 14rem;
+        margin-left: 11rem;
+        margin-right: 11rem;
     }
 
     .section-padding{
