--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,7 +76,7 @@ header{
     flex-direction: column;
 }
 
-.right-flexed a{
+.nav-links{
     color: #BDEBEA;
 }
 
@@ -132,8 +132,13 @@ button a:hover{
 /* Hero styles */
 
 .section-padding{
-    padding-top: 10vh;
-    padding-bottom: 10vh;
+    padding-top: 13vh;
+    padding-bottom: 13vh;
+}
+
+#about article{
+    border-left: 2px groove #00F5A0;
+    padding-left: 1rem;
 }
 
 #hero{
@@ -149,17 +154,13 @@ button a:hover{
     max-width: 100%;
     height: auto;
     margin-bottom: 2rem;
+    border-radius: 50%;
 }
 
-/* #line{
-    position:absolute;
-    background: linear-gradient(90deg, #00F5A0 0%, #00D9F5 100%);
-    border-radius: 3px;
-    width: 7rem;
-    transform: rotate(-90deg);  
-    left: 3px;
-    top: 354.54px;
-} */
+.img-wrapper{
+    width: 80%;
+    margin: 0 auto;
+}
 
 /* Projects section */
 
@@ -185,9 +186,22 @@ button a:hover{
     box-shadow: 10px 20px 20px 4px rgba(0,0,0,0.36);
 }
 
+.text-wrapper{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .link-button{
-    padding: 0.4rem;
+    padding: 0.5rem;
     font-size: 14px;
+    width: 35%;
+}
+
+.button-wrapper{
+    display:flex;
+    justify-content: space-between;
+    justify-self: flex-end;
 }
 
 #long-button{
@@ -205,6 +219,10 @@ button a:hover{
     margin: 5px;
 }
 
+.desc-height{
+    height: 21rem;
+}
+
 .desc-wrapper p{
     padding-top: 1rem;
     padding-bottom: 1rem;
@@ -219,9 +237,10 @@ button a:hover{
 }
 
 .tools-wrapper span{
-    font-size: 0.7rem;
+    font-size: 0.6rem;
     margin-bottom: 0.2rem;
 }
+
 
 /* Skills section */
 
@@ -322,13 +341,22 @@ footer p{
         justify-content: space-around;
     }
 
-    .right-flexed a{
+    .nav-links{
         margin-right: 3rem;
     }
 
     #hero{
         flex-direction: row;
         align-items: center;
+    }
+
+    .img-wrapper{
+        width: 40%;
+      
+    }
+    
+    #hero-text{
+        width: 50%;
     }
 
     .skill{
@@ -370,9 +398,23 @@ footer p{
         gap: 10px;
     }
 
+    .button-wrapper button a{
+        font-size: 0.9rem;
+    }
+
     .project-page{
         width: 45%;
         margin-bottom: 10px;
+    }
+
+    .height{
+        height: 38rem;
+    }
+
+    .link-button{
+        padding: 0.5rem;
+        font-size: 14px;
+        width: 45%;
     }
 }
 
@@ -382,8 +424,8 @@ footer p{
     }
 
     .container{
-        margin-left: 11rem;
-        margin-right: 11rem;
+        margin-left: 14rem;
+        margin-right: 14rem;
     }
 
     .section-padding{
@@ -412,9 +454,6 @@ footer p{
     }
 
     #me{
-        /* background: linear-gradient(90deg, #fff 0%, #00F5A0  100%);
-        background-position:0px 255px;
-        border-radius: 20rem; */
         width: 30rem;
     }
 
